<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
        
    android:orientation="vertical" >
    	<com.zmc.zmcrobot.RobotView 
			    android:id="@+id/robot_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="60"
    	    />

    	    	<LinearLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content" >

    		<TextView
    		    android:id="@+id/textViewVW"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_weight="6"
    		    android:gravity="center"
    		    android:text="[v:0, w:0]" />

    		<CheckBox
    		    android:id="@+id/GravityCheckBox"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_weight="2"
    		    android:text="@string/gravityModeLabel" />
    		
    		<CheckBox
    		    android:id="@+id/SimulateCheckBox"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_weight="2"
    		    android:text="@string/simulageModeLabel" />

    		<Button
    		    android:id="@+id/homeButton"
    		    style="?android:attr/buttonStyleSmall"
    		    android:layout_width="wrap_content"
    		    android:layout_height="wrap_content"
    		    android:layout_weight="6"
    		    android:text="@string/HomeLabel" />

    	</LinearLayout>
    	
    	<LinearLayout
    		    android:layout_width="match_parent"
    		    android:layout_height="0dp"
    		    android:layout_weight="40" >
    	    	    
    		<com.zmc.zmcrobot.SteerView
    		    android:id="@+id/bSteerView"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="5" />
    		<!-- com.zmc.zmcrobot.JoystickView
    		    android:id="@+id/joystickView"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="5" / -->
    		
    	       <!-- com.zmc.zmcrobot.IndicatorBarView
    	        android:id="@+id/indicatorViewL"
    	        android:layout_width="0dp"
    	        android:layout_height="match_parent"
    	        android:layout_weight="5" /-->

    		<ImageButton
    		    android:id="@+id/brakeButton"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="#00000000"
    		    android:contentDescription="@string/Brake"
    		    android:scaleType="fitEnd"
    		    android:src="@drawable/brake" />
    		
               <ImageButton
                   android:id="@+id/speederButton"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:layout_alignParentRight="true"
                   android:layout_marginLeft="@dimen/activity_horizontal_margin"
                   android:layout_marginRight="@dimen/activity_horizontal_margin"
                   android:layout_weight="1"
                   android:background="#00000000"
                   android:baselineAlignBottom="false"
                   android:contentDescription="@string/Speeder"
                   android:scaleType="fitEnd"
                   android:src="@drawable/speed" >
                
			</ImageButton>

            <ImageButton
                android:id="@+id/speeder_rButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/speederButton"
                android:layout_weight="1"
                android:background="#00000000"
                android:baselineAlignBottom="false"
                android:contentDescription="@string/Speeder_r"
                android:scaleType="fitEnd"
                android:src="@drawable/speed_r" >

			</ImageButton>
 		
  
    	</LinearLayout>
        
</LinearLayout>
