<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
             <TextView
                  android:id="@+id/TextViewMsg"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:layout_marginLeft="20dp"
                  android:layout_marginTop="20dp"
                  android:text="@string/stepResponseLabel" />
    
    
             <LinearLayout
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/activity_vertical_margin" >

                  <TextView
                      android:id="@+id/stextView2"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="3"
                      android:gravity="right"
                      android:text="@string/pwmLabel" />

                  <EditText
                      android:id="@+id/PWMEditText"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:ems="10" >
             	</EditText>

              	
             	</LinearLayout>  
             	
               <LinearLayout
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
                   android:paddingBottom="5dp"
                   android:paddingTop="5dp" >

                  <Button
                      android:id="@+id/startButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/startLabel" />

                  <Button
                      android:id="@+id/stopButton"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/stop" />

              </LinearLayout>             
             
             <com.zmc.zmcrobot.CurveView
                   android:id="@+id/curveView"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:layout_weight="1"
                   android:minHeight="300dp" />
             

</LinearLayout>
